---------------------------------------------------------------------------------------------------
Version: 0.2.22
Date: ????
  Changes:
---------------------------------------------------------------------------------------------------
Version: 0.2.21
Date: 2025-10-03
  Changes:
    - Optimized handling fuel items
---------------------------------------------------------------------------------------------------
Version: 0.2.20
Date: 2025-06-29
  Changes:
    - Set a filter on a splitter to the direction without an output belt
---------------------------------------------------------------------------------------------------
Version: 0.2.19
Date: 2025-06-12
  Changes:
    - Fixed automatic "Use filters" setting for inserters with just one filter slot (such as mechanical inserters from Pyanodons)
---------------------------------------------------------------------------------------------------
Version: 0.2.18
Date: 2025-06-01
  Changes:
    - Added support for working across belt ghosts
    - Added support for working across splitters
    - Added support for working across underground belts
---------------------------------------------------------------------------------------------------
Version: 0.2.17
Date: 2025-06-01
  Changes:
    - Added support for default item to show on splitters
    - Added support for lane splitters
  Bugfixes:
    - Fixed crash when setting "Full chest" request on ghost logistic containers
  Fixes:
    - Support for setting "Full chest" requests on quality logistic containers
---------------------------------------------------------------------------------------------------
Version: 0.2.16
Date: 2025-05-19
  Changes:
    - Enable "Use filters" when setting a filter on an inserter, configurable
  Fixes:
    - Fixed filtering mining drill resources when product name is different
---------------------------------------------------------------------------------------------------
Version: 0.2.15
Date: 2025-04-21
  Changes: